@@ -50,25 +50,23 @@ public class MacaroonsAuthenticator implements Authenticator<DPCAuthCredentials,
         logger.debug("Looking up resource {} in path authorizer. With value: {}", credentials.getPathAuthorizer().type(), credentials.getPathAuthorizer().pathParam());
         Map<String, List<String>> searchParams = new HashMap<>();
         searchParams.put("_id", Collections.singletonList(credentials.getPathValue()));
-        searchParams.put("organization", Collections.singletonList(credentials.getOrganization().getId()));
 
-        // Special handling of Group resources, which use tags instead of resource properties.
-        // TODO: Remove with DPC-552
-        if (credentials.getPathAuthorizer().type() == DPCResourceType.Group) {
-            searchParams.put("_tag", Collections.singletonList(String.format("%s|%s", DPCIdentifierSystem.DPC.getSystem(), credentials.getOrganization().getId())));
+        var query = this.client
+            .search()
+            .forResource(credentials.getPathAuthorizer().type().toString())
+            .returnBundle(Bundle.class)
+            .encodedJson();
+
+        if ( List.of(DPCResourceType.Group, DPCResourceType.Practitioner).contains(credentials.getPathAuthorizer().type()) ) {
+            query.withTag(DPCIdentifierSystem.DPC.getSystem(), credentials.getOrganization().getIdPart());
+        } else {
+            searchParams.put("organization", Collections.singletonList(credentials.getOrganization().getId()));
         }
-        final Bundle bundle = this.client
-                .search()
-                .forResource(credentials.getPathAuthorizer().type().toString())
-                .whereMap(searchParams)
-                .returnBundle(Bundle.class)
-                .encodedJson()
-                .execute();
+        final Bundle bundle = query.whereMap(searchParams).execute();
 
         if (bundle.getTotal() == 0) {
             return Optional.empty();
         }
-
         return Optional.of(principal);
     }
 
